# prio

./: Clock.py  Clock2.py  D10.py  D100.py  D12.py  D20.py  D4.py  D6.py  D8.py  Define.py  README.md  Sight.py  SimpleCalc.py  Speaking.py  Translate.py  WebTest.py  bot.py  chat.html  choice.py  d1000.py  db.sqlite3-journal  dictionary.json  index.html  knowledge_base  knowledge_base.json  main.py  pyproject.toml  test  testbody.py
