[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "chatterbot>=1.2.4",
    "gtts==2.5.4",
    "opencv-python>=4.11.0.86",
    "py-espeak-ng>=0.1.8",
    "pyttsx3>=2.98",
    "selenium>=4.32.0",
    "translate==3.6.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
